Fixed issue with horizontal scroll on saved app and layout favorites.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -405,7 +405,7 @@ html {
       }
     }
 
-    #fav-apps {
+    #favorites {
       & > li:not(.nav-item) {
         @include transition("opacity", 0);
         opacity: 0;
